--- a/careLink/templates/careLink/result.html
+++ b/careLink/templates/careLink/result.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'careLink:login' %}">test</a>
+                    <a class="nav-link" href="{% url 'careLink:user_login' %}">test</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'careLink:calendar' %}">スケジュール</a>
