--- a/careLink/templates/careLink/base.html
+++ b/careLink/templates/careLink/base.html
@@ -21,6 +21,8 @@
 
     <!-- ページタイトル -->
     <title>{% block title %}{% endblock %}</title>
+    <style>{% block style %}{% endblock style %}</style>
+
 </head>
 
 <!-- ボディ -->
