--- a/careLink/templates/careLink/add_schedule.html
+++ b/careLink/templates/careLink/add_schedule.html
@@ -30,7 +30,7 @@
 
 
         <h2>新規追加 ({{ date }})</h2>
-        <form method="post" class="mb-4">
+        <form method="post" class="mb-4" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="mb-3">
                 {{ form.title.label_tag }} 
@@ -48,11 +48,16 @@
                 {{ form.recurrence.label_tag }} 
                 {{ form.recurrence|add_class:"form-control" }}
             </div>
+            <div class="mb-3">
+                {{ form.image.label_tag }}  <!-- 画像フィールドの追加 -->
+                {{ form.image|add_class:"form-control" }}
+            </div>
             
             <div class="p-3">
                 <button type="submit" class="btn btn-primary">登録</button>
                 <a class="btn btn-outline-secondary" href="{% url 'careLink:calendar' %}">戻る</a>            
             </div>
+            
         </form>
     </div>
 
