--- a/careLink/templates/careLink/family_add.html
+++ b/careLink/templates/careLink/family_add.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="mb-3">
-            {{ form.elder_code.label_tag }}
+            <a>みまもり番号:</a>
             {{ form.elder_code|add_class:"form-control" }}
         </div>
 
