--- a/careLink/templates/careLink/elder_add.html
+++ b/careLink/templates/careLink/elder_add.html
@@ -3,10 +3,10 @@
 
 {% block content %}
     <div class="container mt-5">
-        <h1 class="mb-4">Elderの登録</h1>
+        <h1 class="mb-4">新規登録</h1>
         
         <!-- 生成されたelder_codeを表示 -->
-        <p>あなたの Elder Code は <strong>{{ elder_code }}</strong> です。登録しますか？</p>
+        <p>あなたの みまもり番号 は <strong>{{ elder_code }}</strong> です。登録しますか？</p>
 
         <form method="post" class="needs-validation" novalidate>
             {% csrf_token %}
