--- a/careLink/templates/careLink/elder_logout.html
+++ b/careLink/templates/careLink/elder_logout.html
@@ -1,9 +1,9 @@
 <body>
-    <h2>ID: {{ elder.elder_id }}&nbsp;&nbsp;&nbsp;&nbsp;CODE: {{ elder.elder_code }}</h2>
-    <h3><font color="red"> 再ログインの際必要になるため、以上の情報をメモしてください </font></h3>
+    <h2>個人番号: {{ elder.elder_id }}&nbsp;&nbsp;&nbsp;&nbsp;みまもり番号: {{ elder.elder_code }}</h2>
+    <h3><font color="red"> 再入室の際必要になるため、以上の情報をメモしてください </font></h3>
     <form method="POST">
         {% csrf_token %}
-        <button type="submit" name="logout">ログアウトする</button>
-        <button type="submit" name="cancel">ログアウトしない</button>
+        <button type="submit" name="logout">退室する</button>
+        <button type="submit" name="cancel">退室しない</button>
     </form>
 </body>
