--- a/careLink/templates/careLink/login.html
+++ b/careLink/templates/careLink/login.html
@@ -83,20 +83,20 @@
     </style>
 </head>
 <body>
-    <h1>Login Page</h1>
+    <h1>ログインページ</h1>
     <form method="post">
         {% csrf_token %}
-        <label for="username">Username:</label>
+        <label for="username">ユーザー名:</label>
         <input type="text" id="username" name="username" class="styled-input" required>
-        <label for="password">Password:</label>
+        <label for="password">パスワード:</label>
         <input type="password" id="password" name="password" class="styled-input" required>
         <button type="submit" class="styled-button">ログイン</button>
         {% if error %}
             <p>{{ error }}</p>
         {% endif %}
     </form>
-    <a href="signup_elder" class="icon-link"><i class="fas fa-user"></i>高齢者側サインアップ</a>
-    <a href="signup_family" class="icon-link"><i class="fas fa-users"></i>家族側サインアップ</a><br/>
-    <a href="emergency_login" class="emergency-link"><i class="fas fa-exclamation-circle"></i>高齢者側 緊急ログイン</a>
+    <a href="signup_elder" class="icon-link"><i class="fas fa-user"></i>高齢者側 サインアップ</a>
+    <a href="signup_family" class="icon-link"><i class="fas fa-users"></i>家族側 サインアップ</a><br/>
+    <a href="emergency_login" class="emergency-link"><i class="fas fa-exclamation-circle"></i>高齢者側 再ログイン</a>
 </body>
 </html>
