--- a/careLink/templates/careLink/result.html
+++ b/careLink/templates/careLink/result.html
@@ -10,17 +10,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'careLink:user_login' %}">test</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'careLink:user_login' %}">ログアウト</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'careLink:calendar' %}">スケジュール</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'careLink:result' %}">行動の確認</a>
+                    <a class="nav-link active" href="{% url 'careLink:result' %}">行動の確認</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ヘルプ</a>
+                    <a class="nav-link" href="{% url 'careLink:family_help' %}">ヘルプ</a>
                 </li>
             </ul>
         </div>
